@@ -308,7 +308,7 @@ def get_batch_for_vaccination_types(dbo):
         "AND DateOfVaccination Is Not Null AND DateOfVaccination >= ? " \
         "ORDER BY animalvaccination.ID DESC, VaccinationID", [ dbo.today(offset=-31) ], distincton="ID")
 
-def get_regimens(dbo, animalid, onlycomplete = False, sort = ASCENDING_REQUIRED):
+def get_regimens(dbo, animalid, onlycomplete = False, onlyactive = False, sort = ASCENDING_REQUIRED):
     """
     Returns a recordset of medical regimens for an animal:
     TREATMENTNAME, COST, COMMENTS, NAMEDFREQUENCY, NAMEDNUMBEROFTREATMENTS,
@@ -319,19 +319,21 @@ def get_regimens(dbo, animalid, onlycomplete = False, sort = ASCENDING_REQUIRED)
     l = dbo.locale
     sc = ""
     if onlycomplete:
-        sc = "AND am.Status = 2"
+        sc = f"AND am.Status = {COMPLETED}"
+    elif onlyactive:
+        sc = f"AND am.Status = {ACTIVE}"
+    limit1 = dbo.sql_limit(1)
     sql = "SELECT am.*, " \
         "(SELECT amt.DateRequired FROM animalmedicaltreatment amt WHERE amt.AnimalMedicalID = am.ID AND amt.DateGiven Is Null " \
-        "ORDER BY amt.DateRequired DESC %s) AS NextTreatmentDue, " \
+        f"ORDER BY amt.DateRequired DESC {limit1}) AS NextTreatmentDue, " \
         "(SELECT amt.DateGiven FROM animalmedicaltreatment amt WHERE amt.AnimalMedicalID = am.ID AND amt.DateGiven Is Not Null " \
-        "ORDER BY amt.DateGiven DESC %s) AS LastTreatmentGiven, " \
+        f"ORDER BY amt.DateGiven DESC {limit1}) AS LastTreatmentGiven, " \
         "(SELECT amt.Comments FROM animalmedicaltreatment amt WHERE amt.AnimalMedicalID = am.ID AND amt.DateGiven Is Not Null " \
-        "ORDER BY amt.DateGiven DESC %s) AS LastTreatmentComments, " \
+        f"ORDER BY amt.DateGiven DESC {limit1}) AS LastTreatmentComments, " \
         "(SELECT adv.OwnerName FROM animalmedicaltreatment amt INNER JOIN owner adv ON adv.ID=amt.AdministeringVetID " \
         "WHERE amt.AnimalMedicalID = am.ID AND amt.DateGiven Is Not Null " \
-        "ORDER BY amt.DateGiven DESC %s) AS LastTreatmentVetName " \
-        "FROM animalmedical am WHERE am.AnimalID = %d %s " % \
-            (dbo.sql_limit(1), dbo.sql_limit(1), dbo.sql_limit(1), dbo.sql_limit(1), animalid, sc)
+        f"ORDER BY amt.DateGiven DESC {limit1}) AS LastTreatmentVetName " \
+        f"FROM animalmedical am WHERE am.AnimalID = {animalid} {sc} "
     if sort == ASCENDING_REQUIRED:
         sql += " ORDER BY am.StartDate"
     elif sort == DESCENDING_REQUIRED:
